Include familiar image names in familiars.txt
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@9636 b29ace70-8910-0410-8dcc-aa2fc6433167